--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.GameActivity">
+    tools:context=".ui.GameActivity"
+    tools:ignore="SpUsage, HardcodedText">
 
     <com.devorion.mvitest.ui.GameBoard
         android:id="@+id/gameBoard"
@@ -20,18 +21,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Countdown"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="40dp"
         app:layout_constraintBottom_toBottomOf="@id/gameBoard"
         app:layout_constraintLeft_toLeftOf="@id/gameBoard"
         app:layout_constraintRight_toRightOf="@id/gameBoard"
         app:layout_constraintTop_toTopOf="@id/gameBoard" />
 
-    <TextView
-        android:id="@+id/streak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Streak"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@android:color/darker_gray"
         app:layout_constraintTop_toBottomOf="@id/gameBoard" />
 
     <TextView
@@ -39,9 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="Status"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/streak" />
+        app:layout_constraintTop_toBottomOf="@id/gameBoard" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
